--- a/css/mobile.css
+++ b/css/mobile.css
@@ -60,7 +60,7 @@ h1 {
   padding: 60px 0px;
 }
 
-#more {
+#more-container {
   height: 450px;
   background: url(/img/ounce-3913742.jpg) no-repeat center center/cover;
   background-color: rgba(0, 0, 0, 0.4);
@@ -71,6 +71,6 @@ h1 {
   align-items: center;
 }
 
-#more #info {
+#more-container #info {
     max-width: 380px;
 }
