--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,10 @@ body {
   font-family: "Poppins", sans-serif;
 }
 
+li {
+  list-style: none;
+}
+
 h1 {
   font-size: 2rem;
   letter-spacing: 2px;
@@ -89,7 +93,7 @@ button:active {
 }
 
 #showcase h2 {
-  margin-top: 500px;
+  margin-top: 60vh;
   letter-spacing: 10px;
   font-size: 2.5rem;
 }
@@ -157,7 +161,7 @@ button:active {
   transition: background 500ms ease;
 }
 
-#more {
+#more-container {
   color: white;
   height: 750px;
   background: url(/img/ounce-3913742.jpg) no-repeat center center/cover;
@@ -169,7 +173,7 @@ button:active {
   align-items: center;
 }
 
-#more #info {
+#more-container #info {
   max-width: 1000px;
   padding: 40px;
   border-radius: 20px;
