--- a/css/mobile.css
+++ b/css/mobile.css
@@ -74,3 +74,10 @@ h1 {
 #more-container #info {
     max-width: 380px;
 }
+.contact-list-item:hover {
+  width: 250px;
+  cursor: pointer;
+  font-size: 20px;
+  color: green;
+  border: 1px solid green;
+}
