--- a/css/mobile.css
+++ b/css/mobile.css
@@ -53,7 +53,7 @@ h1 {
 }
 
 #about-us-item {
-    width: 100vw;
+  width: 100vw;
 }
 
 #about-us-item:hover {
@@ -72,12 +72,58 @@ h1 {
 }
 
 #more-container #info {
-    max-width: 380px;
+  max-width: 380px;
 }
+
+footer {
+  height: 500px;
+}
+
+#contact {
+  height: 100%;
+  width: 100%;
+  display: grid;
+  grid-template-columns: 1fr;
+  place-items: center;
+}
+
+.contact-list-item {
+  width: 60%;
+}
+
 .contact-list-item:hover {
-  width: 250px;
-  cursor: pointer;
+  width: 60%;
   font-size: 20px;
   color: green;
   border: 1px solid green;
+}
+
+#item-1 {
+  grid-column: 1;
+  grid-row: 1;
+}
+
+#item-2 {
+  grid-column: 1;
+  grid-row: 2;
+}
+
+#item-3 {
+  grid-column: 1;
+  grid-row: 3;
+}
+
+#item-4 {
+  grid-column: 1;
+  grid-row: 4;
+}
+
+#item-5 {
+  grid-column: 1;
+  grid-row: 5;
+}
+
+#item-6 {
+  grid-column: 1;
+  grid-row: 6;
 }
